lib/ocaml/src/TSimpleServer.ml
@@ -26,13 +26,15 @@ object
   method serve =
     try
       st#listen;
-      let c = st#accept in
-      let trans = tf#getTransport c in
-      let inp = ipf#getProtocol trans in
-      let op = opf#getProtocol trans in
-        try
-          while (pf#process inp op) do () done;
-          trans#close
-        with e -> trans#close; raise e
+      while true do
+        let c = st#accept in
+        let trans = tf#getTransport c in
+        let inp = ipf#getProtocol trans in
+        let op = opf#getProtocol trans in
+          try
+            while (pf#process inp op) do () done;
+            trans#close
+          with e -> trans#close; raise e
+      done
     with _ -> ()
 end
